kubernetes-istio/gateway/external-test-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-test
spec:
  hosts:
  - "*"
  gateways:
  - external-test-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: external-test
        port:
          number: 9086
