kubernetes-istio/gateway/social-insurance-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: social-insurance-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: social-insurance
spec:
  hosts:
  - "*"
  gateways:
  - social-insurance-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loan-application
        port:
          number: 9080
